fix wwraper

--- a/src/scss/layout/_main-strength_weak.scss
+++ b/src/scss/layout/_main-strength_weak.scss
@@ -6,7 +6,8 @@
     padding: 0 30px;
   }
   @include desktop {
-    max-width: 1000px;
+    // padding + desktop min-width
+    max-width: 1260px;
   }
 }
 
